--- a/monitor/index.html
+++ b/monitor/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Fullscreen</title>
   <style>
-    html, body { width: 100%; height: 100%; margin: 0; padding: 0;}
+    html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow:auto;}
     body {color: #fff; font-family: "Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei","微软雅黑",tahoma,arial,simsun,"宋体"; text-align: center;}
     h1 { font-size: 9vw; margin-top: 20vh; }
     h2 { font-size: 2.5vw;}
