Monitor: change title and color

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fullscreen</title>
+  <title>节操网——做一个有节操的好少年！</title>
   <style>
     html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow:auto;}
     body {color: #fff; font-family: "Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei","微软雅黑",tahoma,arial,simsun,"宋体"; text-align: center;}
@@ -23,7 +23,7 @@
   </div>
   <script>
     var currentBgIdx = 0;
-    var bgList = ['black', 'white', 'green', 'blue', 'yellow'];
+    var bgList = ['black', 'white', 'red', 'green', 'blue'];
 
     var enterMethods = ['requestFullScreen', 'msRequestFullscreen','webkitRequestFullScreen','mozRequestFullScreen'];
     var exitMethods = ['exitFullscreen', 'msExitFullscreen', 'mozCancelFullScreen', 'webkitExitFullscreen'];
