--- a/monitor/index.html
+++ b/monitor/index.html
@@ -19,7 +19,7 @@
 </head>
 <body onclick="clickAnywhere()">
   <div>
-    <h1>显示器节操测试</h1><h2>单击任意处开始，测试中单击可切换屏幕颜色</h2>
+    <h1>显示器测试</h1><h2>单击任意处开始，开始后单击切换颜色</h2>
   </div>
   <script>
     var currentBgIdx = 0;
