--- a/index.html
+++ b/index.html
@@ -10,44 +10,32 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
     <title>节操网——做一个有节操的好少年！</title>
-    <style type="text/css">
-      body {
-        background-color: #313131;
-        color: #fff;
-        font-family: "Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei","微软雅黑",tahoma,arial,simsun,"宋体";
-        text-align: center;
-      }
-      h1 {
-        font-size: 182px;
-      }
-      h2 {
-        letter-spacing: 30px;
-      }
-    </style>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <h1>jiecao.pw
     <h2>你的节操，我做主！
 
-  <script type="text/javascript">
-     // prevent A record
-     if (!(/.*\.?jiecao\.pw/).test(document.domain)) {
-       location.replace('http://jiecao.pw');
-     }
+    <script type="text/javascript">
+      // // prevent A record
+      // if (!(/.*\.?jiecao\.pw/).test(document.domain)) {
+      //   location.replace('http://jiecao.pw');
+      // }
 
-     // prevent iframe
-     if (self !== top) {
-       top.location.replace(location.href);
-     }
-  </script>
+      // // prevent iframe
+      // if (self !== top) {
+      //   top.location.replace(location.href);
+      // }
+    </script>
 
-  <script type="text/javascript">
-    (function() {
-      var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.charset = 'UTF-8';
-      ta.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'tajs.qq.com/stats?sId=24924496';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s);
-    })();
-  </script>
+    <script type="text/javascript">
+      (function() {
+        var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.charset = 'UTF-8';
+        ta.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'tajs.qq.com/stats?sId=24924496';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s);
+      })();
+    </script>
   </body>
 </html>
