--- a/monitor/index.html
+++ b/monitor/index.html
@@ -6,6 +6,8 @@
   <style>
     html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow:auto;}
     body {color: #fff; font-family: "Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei","微软雅黑",tahoma,arial,simsun,"宋体"; text-align: center;}
+    h1::-moz-selection, h2::-moz-selection { background: transparent; }
+    h1::selection, h2::selection { background: transparent; }
     h1 { font-size: 9vw; margin-top: 20vh; }
     h2 { font-size: 2.5vw;}
 
@@ -17,13 +19,13 @@
 
   </style>
 </head>
-<body onclick="clickAnywhere()">
+<body onclick="clickAnywhere()" onkeyup="keyup(event)">
   <div>
     <h1>显示器测试</h1><h2>单击任意处开始，然后单击切换颜色</h2>
   </div>
   <script>
     var currentBgIdx = 0
-      , defaultBgList = ['black', 'white', 'red', 'green', 'blue']
+      , defaultBgList = ['green', 'white', 'red', 'black', 'blue']
       , bgList
       , enterMethods = ['requestFullScreen', 'msRequestFullscreen','webkitRequestFullScreen','mozRequestFullScreen']
       , exitMethods = ['exitFullscreen', 'msExitFullscreen', 'mozCancelFullScreen', 'webkitExitFullscreen']
@@ -47,25 +49,51 @@
       }
     }
 
+    var inFullScreenMode = function() {
+      return document.fullscreenElement || document.mozFullScreenElement || document.webkitFullscreenElement || document.msFullscreenElement
+    }
+
     var enterFullscreen = function(){
       tryRun(enterMethods, document.documentElement);
       currentBgIdx = 0;
-      document.body.style.background = bgList[0]
-    };
+      document.body.style.background = bgList[0];
+    }
 
     var exitFullscreen = function() {
       tryRun(exitMethods, document);
       currentBgIdx = 0;
     }
 
-    var clickAnywhere = function() {
-      if (!document.fullscreenElement &&!document.mozFullScreenElement && !document.webkitFullscreenElement && !document.msFullscreenElement)
-        enterFullscreen();
-      else
-        if (bgList[ currentBgIdx + 1 ])
+    var nextPage = function() {
+      if (bgList[ currentBgIdx + 1 ])
           document.body.style.background = bgList[ ++currentBgIdx ];
         else
           exitFullscreen();
+    }
+
+    var prevPage = function() {
+      if (bgList[ currentBgIdx - 1 ])
+          document.body.style.background = bgList[ --currentBgIdx ];
+        else
+          exitFullscreen();
+      }
+
+    var clickAnywhere = function() {
+      if (inFullScreenMode())
+        nextPage();
+      else
+        enterFullscreen();
+    }
+
+    var keyup = function(e) {
+      switch (e.which) {
+        case 37: // left arrow
+        case 38: // up arrow
+          prevPage();
+          break;
+        default:
+          nextPage();
+      }
     }
 
   </script>
